--- a/app/assets/stylesheets/user/application.scss
+++ b/app/assets/stylesheets/user/application.scss
@@ -1,4 +1,22 @@
 .application {
+  &__common {
+    &--imgLabel {
+      width: 90%;
+      margin: 0 5%;
+      display: block;
+      background: #fff;
+      text-align: center;
+      padding: 10px 15px 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      cursor: pointer;
+    }
+    &--imgPreview {
+      max-height: 150px;
+      max-width: 100%;
+      margin-bottom: 10px;
+    }
+  }
   &__header {
     &--searchForm {
       text-align: right;
