--- a/app/assets/stylesheets/user/members.scss
+++ b/app/assets/stylesheets/user/members.scss
@@ -15,15 +15,17 @@
     &--divRight {
       float: left;
       width: 70%;
+      padding: 0 1em;
       vertical-align: bottom;
     }
     &--img {
       background-color: black;
       max-height: 150px;
+      max-width: 100%;
       display: inline-block;
       padding: 5px;
       border: thin solid dimgray;
-      margin-bottom: 1em;
+      margin: 2em 0;
     }
   }
   &__edit {
