--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -2,22 +2,22 @@
 
 <!--ページ上部-->
 <div class="makings__edit--top">
+  <!-- 「submit」ボタンはviews/makings/_edit_helper.html.erb -->
   <%= form_with( model: @making, url: making_path, method: "patch", class: "form-horizontal" ) do | f | %>
-  <%= f.hidden_field :display_format_id %>
   <!--ページ上部のタイトル-->
   <h3>
     <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
     パターン編集機能
-    <%= render 'makings/edit_helper', f: f %>
+    <%= render 'makings/edit_helper' %>
   </h3>
 
   <!--トーラス面設定-->
   <div class="form-group">
     <%= f.label :is_torus, " トーラス面設定", class: "fas fa-globe-asia col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.radio_button :is_torus, true %>
+      <%= f.radio_button :is_torus, true, onchange: "patternData.changeTorusFlag(this.value);" %>
       <%= f.label :is_torus, '有効' %>
-      <%= f.radio_button :is_torus, false %>
+      <%= f.radio_button :is_torus, false, onchange: "patternData.changeTorusFlag(this.value);" %>
       <%= f.label :is_torus, '無効' %>
     </div>
   </div>
@@ -50,34 +50,3 @@
   <!--ライフゲームエミュレート画面-->
   <%= render 'patterns/emulation' %>
 </div>
-
-
-<script type="text/javascript">
-  /*
-  * =============================
-  * パターンアップデート前のバリデーション処理
-  * =============================
-  */
-  $(function(){
-    $("form").submit( function() {
-      // アクション名を取得
-      let actionName = $(this).attr('action');
-      // メソッド名を取得
-      let methodName = $(this).attr('method');
-      // Makings#updateである場合
-      if ( /making/.test(actionName) && /post/i.test( methodName ) ) {
-        // 提出前のバリデーション実行 => falseなら送信中止
-        return verificationMakingPattern();
-      }
-    });
-
-
-    /*
-    * =============================
-    * トーラス面フラグのリアルタイム反映メソッド処理
-    * =============================
-    */
-    $("#making_is_torus_true").change( () => patternData.changeTorusFlag( true ) );
-    $("#making_is_torus_false").change( () => patternData.changeTorusFlag( false ) );
-  });
-</script>
