--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -8,7 +8,7 @@
   <h3>
     <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
     パターン編集機能
-    <%= render 'makings/edit_helper' %>
+    <%= render 'makings/edit_helper', patterns_list: @patterns_list %>
   </h3>
 
   <!--トーラス面設定-->
