--- a/app/views/patterns/_form.html.erb
+++ b/app/views/patterns/_form.html.erb
@@ -22,7 +22,7 @@
 <div class="form-group">
   <%= f.label :display_format_id, ' セルの表示形式', class: "fas fa-th-large col-sm-2 control-label" %>
   <div class="col-sm-10">
-    <%= f.select :display_format_id, options_for_select( DisplayFormat.get_index ), {}, onchange: "previewDisplayFormatAtPatternsNew(this.value);" %>
+    <%= f.select :display_format_id, options_for_select( DisplayFormat.list ), {}, onchange: "previewDisplayFormatAtPatternsNew(this.value);" %>
   </div>
 </div>
 
