--- a/app/views/display_formats/_form.html.erb
+++ b/app/views/display_formats/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with( model: display_format, class: "form-horizontal display_formats__form" ) do | f | %>
+<%= form_with( model: display_format, html: { class: "form-horizontal display_formats__form", onchange: "realTimeReflectDisplayFormat();" }) do | f | %>
 
 <!--ヘッダ-->
 <div class="form-group">
@@ -73,16 +73,3 @@
   <% end %>
 </p>
 <% end %>
-
-
-<script type="text/javascript">
-  /*
-  * =============================
-  * ライフゲーム画面のCSS及びセルの表示定義を反映処理
-  * =============================
-  */
-  $( function() {
-    // 入力項目のいずれかが変更された場合に発火
-    $("input").change( realTimeReflectDisplayFormat );
-  });
-</script>
