[hotfix] Fix get_top_margin method at makings_helper

--- a/app/views/makings/_edit_helper.html.erb
+++ b/app/views/makings/_edit_helper.html.erb
@@ -175,7 +175,7 @@
 				<li>「option(⌥)キー」＋「方向キー」でその方向に10セルずつ移動できます。（windowsの場合は「Altキー」＋「方向キー」）</li>
 				<li>「shiftキー」＋「方向キー」でその方向に反転できます。</li>
 				<li>「"r"キー」で反時計回りに９０°回転ができます。</li>
-				<li>置き場所が決まったら「完了」ボタンを押してください。</li>
+				<li>置き場所が決まったら「設置」ボタンを押してください。</li>
 			</ul>
 			<p class="makings__edit--couplingButtonPosition">
 				<button type="button" name="button" onclick="changeCouplingMode('finish', true);" class="btn btn-warning">
