--- a/app/views/patterns/_form.html.erb
+++ b/app/views/patterns/_form.html.erb
@@ -58,7 +58,7 @@
 
 <!--入力フォームの分岐-->
 
-<% if action_name == 'new' then %>
+<% if @pattern.new_record? then %>
 <!--newページの場合-->
 
 <!--四方向のマージン（自動入力）-->
