--- a/app/views/admin/categories/_article.html.erb
+++ b/app/views/admin/categories/_article.html.erb
@@ -1,7 +1,10 @@
 <!--カテゴリの個別表示用部分テンプレート-->
-<td class="categories__index--tableTd"><%= category.id %></td>
-<td><%= category.name %></td>
-<td><%= category.explanation %></td>
-<td>
-  <%= link_to "編集", edit_admin_category_path( category ), class: "btn btn-success", remote: true %>
-</td>
+
+<tr class='categories__index--tableTr <%= "categories___article--#{category.id}" %>'>
+  <td class="categories__index--tableTd"><%= category.id %></td>
+  <td><%= category.name %></td>
+  <td><%= category.explanation %></td>
+  <td>
+    <%= link_to "編集", edit_admin_category_path( category ), class: "btn btn-success", remote: true %>
+  </td>
+</tr>
