--- a/app/views/admin/categories/create.js.erb
+++ b/app/views/admin/categories/create.js.erb
@@ -1,6 +1,6 @@
 // エラーの存在を判定
 <% if @category.errors.any? then %>
-// 作成中のフォーム表示と、エラーメッセージの表示
+// エラーメッセージの表示のため、フォームの置換処理
 $(".categories___article--form").html("<%= escape_javascript( render 'admin/categories/form', category: @category ) %>");
 // エラー項目にエラー項目通知用のclassを適用する
 <% @category.errors.each do | column, message | %>
@@ -12,10 +12,8 @@ $("#category_<%= column %>").addClass("application__errors--textField");
 alert("新しいカテゴリ「<%= @category.name %>」\nを追加しました。");
 // フォームのリセット
 $(".categories___article--form").html("<%= escape_javascript( render 'admin/categories/form', category: Category.new ) %>");
-// 新しく作成したカテゴリに対応するクラス名の作成
-let className = '<%= "categories___article--#{@category.id}" %>';
 // エラーがなければ、一覧の最後尾に項目を追加
-$("table").append(`<tr class=${className}><%=  escape_javascript( render 'admin/categories/article', category: @category ) %></tr>`);
+$("table tbody").append("<%=  escape_javascript( render 'admin/categories/article', category: @category ) %>");
 // 作成した項目まで移動(admin/categories.js)
-moveToEditTag( className );
+moveToEditTag( <%= @category.id %> );
 <% end %>
