[Fix] Favorites#create and #destroy abot JS code [Add] count up comments with create PostComment count at Patterns#show

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -30,6 +30,13 @@
    display: block;
    clear: both;
  }
+ a {
+   color: inherit;
+   &:hover {
+     text-decoration: none;
+     color: inherit;
+   }
+ }
 
 
  body {
