--- a/app/views/favorites/_create.html.erb
+++ b/app/views/favorites/_create.html.erb
@@ -1,2 +1,2 @@
 <!--お気に入り登録表示用部分テンプレート-->
-<%= link_to "お気に入り登録", pattern_favorite_path( pattern_id ), method: :post, remote: true, class: "favorites__create" %>
+<%= link_to "お気に入り登録", pattern_favorite_path( pattern_id ), method: :post, remote: true, class: "favorites__common--registration" %>
