--- a/app/views/patterns/show.html.erb
+++ b/app/views/patterns/show.html.erb
@@ -42,7 +42,8 @@
 
     <!--コメント一覧タイトル-->
     <h4 class="comments__index--headline">
-      <%= content_tag :i, "#{@pattern.comments_count}件のコメント", class: "fas fa-comments" %>
+      <%= content_tag :i, "", class: "fas fa-comments" %>
+      <%= content_tag :span, "#{@pattern.comments_count}件のコメント", class: "comments__index--count" %>
     </h4>
     <!--コメント一覧-->
     <div class="comments__index">
