--- a/app/views/post_comments/create.js.erb
+++ b/app/views/post_comments/create.js.erb
@@ -3,6 +3,15 @@
 // バリデーション内容をアラートで表示
 alert( "<%= @comment.errors.full_messages.join('\n') %>" );
 <% else %>
+// コメント数のカウントアップ処理（let再定義によるエラー回避のため）
+(function() {
+  let regexp = /\d+/;
+  let target = $(".comments__index--count");
+  // コメント数を取得
+  let commentsCount = regexp.exec( target.text() )[0];
+  // コメント数のカウントアップ＆置換
+  target.text(`${~~commentsCount+1}件のコメント`)
+})();
 // 投稿内容をindexのトップに反映
 $(".comments__index").prepend( "<%= escape_javascript( render 'post_comments/article', post_comment: @comment ) %>" );
 // テキストエリアの初期化
