--- a/app/views/patterns/_property.html.erb
+++ b/app/views/patterns/_property.html.erb
@@ -11,7 +11,7 @@
     </li>
     <li>
       <%= content_tag :i, '', class: "fas fa-comment" %>
-      コメント: <%= pattern.comments_count %>
+      コメント: <%= content_tag :span, pattern.comments_count, class: "comments__index--patternId=#{pattern.id}" %>
     </li>
     <!--お気に入り項目-->
     <li class="favorites__li favorites__li--patternId=<%= pattern.id %>">
