--- a/app/views/admin/categories/_article.html.erb
+++ b/app/views/admin/categories/_article.html.erb
@@ -1,6 +1,6 @@
 <!--カテゴリの個別表示用部分テンプレート-->
 
-<tr class='categories__index--tableTr <%= "categories___article--#{category.id}" %>'>
+<tr class='categories__index--tableTr <%= "categories___article--categoryId=#{category.id}" %>'>
   <td class="categories__index--tableTd"><%= category.id %></td>
   <td><%= category.name %></td>
   <td><%= category.explanation %></td>
